--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <a href="index.html">My Name is Apitawn Chirakunasin</a>
 </body>
 </html>
