--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>My Profile</h1>
     <a href="index.html">My Name is Apitawn Chirakunasin</a>
+    <p>Student ID: 672115050
+        <blockquote>Age: 19</blockquote>
+        <blockquote>Faculty: College of Arts, Media and Technology</blockquote>
+        <blockquote>Major: Software Engineering</blockquote>
+        <blockquote>University: Chiang Mai University</blockquote>
+    </p>
 </body>
 </html>
