--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+    <title>index Profile</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <a href="profile.html">Go to Profile Page</a>
 </body>
 </html>
