edit profile page

--- a/profile.html
+++ b/profile.html
@@ -8,14 +8,18 @@
 </head>
 <body>
     <h1>My Profile</h1>
-    <a href="index.html">My Name is Apitawn Chirakunasin</a>
+    <p>My Name is Apitawn Chirakunasin</p>
+    <br>
     <p>Student ID: 672115050
         <blockquote>Age: 19</blockquote>
         <blockquote>Faculty: College of Arts, Media and Technology</blockquote>
         <blockquote>Major: Software Engineering</blockquote>
         <blockquote>University: Chiang Mai University</blockquote>
     </p>
-    <a href="index.html">My Name is not Apitawn Chirakunasin anymore</a>
-    <img height="100" width="200" src="./asset/672115002.jpg" />
+    <br>
+    <p> Name is not Apitawn Chirakunasin anymore</p>
+    <img width="200" src="./asset/672115002.jpg" />
+    <br>
+    <a href="index.html">Back to Index Page</a>
 </body>
 </html>
