--- a/CAMT.html
+++ b/CAMT.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <img width="200" src="./asset/camt_logo.png" />
     <h1>Welcome to College of Arts, Media and Technology</h1>
     <p>This is CAMT Faculty Page We havae many interesting majors such as</p>
     <ul>
